# GOOD_descriptor

./: CMakeLists.txt  LICENSE  README.md
include/: good.h
point_cloud/: bottle.pcd  bowl.pcd  camera.ply  coffee_cup.ply  juice.ply  milk.ply  plate.pcd  slc_template.pcd  vase.pcd
src/: good.cpp  test_GOOD_descriptor.cpp
